--- a/static/person.css
+++ b/static/person.css
@@ -117,7 +117,7 @@ body {
     /* 其他样式，如加粗、斜体等 */
 }
 
-.post {
+.forum-container {
     background-color: #ffffff;
     border-radius: 20px;
     padding: 20px;
@@ -131,7 +131,7 @@ body {
     transform: translateY(135px);
 }
 
-.post::before {
+.forum-container::before {
     content: "";
     position: absolute;
     top: 0;
@@ -142,7 +142,7 @@ body {
     border-radius: 0 0 10px 0;
 }
 
-.post-title {
+.forum-container-title {
     color: #d77474;
     font-weight: bold;
     font-size: 18px;
