--- a/static/base.css
+++ b/static/base.css
@@ -16,27 +16,28 @@ body {
     background-repeat: no-repeat;
     overflow: hidden;
     color: #fff;
-}
+  }
 
   .search-container {
     display: flex;
     justify-content: center; /* 在水平方向上居中 */
     align-items: center; /* 在垂直方向上居中 */
     margin-top: 20px; /* 调整搜索栏距离上方的间距，根据需要调整 */
+    margin-bottom: 20px; /* 增加底部间距 */
   }
- 
+
   .search-box {
-    position: relative;
     border: 1px solid #ccc;
     padding: 20px;
-    width: 65%;
-    left:5%;
+    margin-left:70px;
+    width: 55%;
     border-radius: 40px;
     font-size: 20px; 
     background-image: linear-gradient(to right, transparent 15%, #ccc 15%, #ccc 85%, transparent 85%), linear-gradient(to right, transparent 15%, #ccc 15%, #ccc 85%, transparent 85%);
     background-size: 10px 100%, 10px 100%; 
     background-position: 5% center;
   }
+
   .magnifying-glass {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 16l-4-4"/><circle cx="8" cy="8" r="5"/></svg>');
     background-repeat: no-repeat;
@@ -65,6 +66,23 @@ body {
     color:#fdfbe3;
   }
 
+  .upload-button {
+    margin-left: 30px; /* 修改左边距 */
+    font-size: 17px;
+    font-weight: bold; /* 设置文字粗细为粗体 */
+    color: #ffffff;
+    width: auto; /* 设置宽度为自动，根据内容调整 */
+    height:55px;
+    border-radius: 20px; /* 设置圆角半径 */
+    background-color: #11396E; /* 设置背景颜色 */
+    padding: 10px 20px; /* 设置内边距 */
+    border: 1px solid #11396E; /* 设置边框 */
+  }
+
+  .upload-button:hover {
+      background-color: #abb7ca; /* 设置鼠标悬停时的背景颜色 */
+      color: #11396E; /* 设置鼠标悬停时的文字颜色 */
+  }
 
 .content {
     padding: 30px;
