--- a/TEXTREADING/readingText/readingTextHeader.css
+++ b/TEXTREADING/readingText/readingTextHeader.css
@@ -174,3 +174,196 @@ header>div>img {
     left: 8%;
     top: 10%
 }
+
+
+/* 点赞 收藏 */
+.collection {
+    width: 230px;
+    height: 100px;
+    position: fixed;
+    display: flex;
+    /* 使用 fixed 以确保卡片固定在页面位置 */
+    top: 40%;
+    /* 调整距离顶部的位置 */
+    right: 2%;
+    /* 调整距离右侧的位置 */
+    border-radius: 5px;
+}
+
+
+.collection-content {
+    box-sizing: border-box;
+    padding: 10px;
+    overflow: hidden;
+    position: relative;
+    /* 使用 relative 以确保内部元素定位正确 */
+    width: 100%;
+    height: 100%;
+}
+
+
+
+.collection-content .collection-btn {
+    background-image: linear-gradient(135deg, rgb(106, 106, 245) 0%, rgb(132, 50, 255) 100%);
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    border-radius: 50%;
+    z-index: 1;
+    cursor: pointer;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    animation: pop-btn 0.3s both ease-in-out 0.5s;
+}
+
+@keyframes pop-btn {
+    0% {
+        transform: scale(0);
+    }
+
+    80% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.collection-content .collection-btn:hover {
+    box-shadow: 0 0 0 5px rgba(170, 187, 204, 0.5);
+}
+
+.collection-content .collection-btn span {
+    width: 60%;
+    height: 2px;
+    position: absolute;
+    background-color: white;
+    top: 50%;
+    left: 20%;
+    transform: translateY(-50%);
+    animation: to-hamburger 0.3s forwards ease-in-out;
+}
+
+.collection-content .collection-btn span::before,
+.collection-content .collection-btn span::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background-color: white;
+    transition-duration: 0.3s;
+    transform: rotate(0deg);
+    right: 0;
+}
+
+.collection-content .collection-btn span::before {
+    margin-top: -7px;
+}
+
+.collection-content .collection-btn span::after {
+    margin-top: 7px;
+}
+
+.collection-content .collection-btn.active span {
+    animation: to-arrow 0.3s forwards ease-in-out;
+}
+
+.collection-content .collection-btn.active span::before,
+.collection-content .collection-btn.active span::after {
+    width: 60%;
+    right: -1px;
+}
+
+.collection-content .collection-btn.active span::before {
+    transform: rotate(45deg);
+}
+
+.collection-content .collection-btn.active span::after {
+    transform: rotate(-45deg);
+}
+
+@keyframes to-hamburger {
+    from {
+        transform: translateY(-50%) rotate(-180deg);
+    }
+}
+
+@keyframes to-arrow {
+    from {
+        transform: translateY(-50%) rotate(0deg);
+    }
+
+    to {
+        transform: translateY(-50%) rotate(180deg);
+    }
+}
+
+.collection-box {
+    opacity: 0;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.7);
+    position: absolute;
+    top: 50%;
+    right: -30%;
+    transform: translate(-60%, -50%);
+    transition-duration: 0.3s;
+    box-shadow: 0 0 10px #a1c8e8;
+    border: 5px #5785db solid;
+}
+
+.collection-box::after {
+    content: '';
+    display: block;
+    width: 100px;
+    height: 100px;
+    background-size: cover;
+    opacity: .7;
+    border-radius: 50%;
+
+}
+
+.collection-box i {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #ececec;
+    font-size: 25px;
+    text-align: center;
+    line-height: 50px;
+    position: absolute;
+    left: 18px;
+    top: calc(60px - 50px/2 - 5px);
+    box-shadow: 0 0 10px #fff;
+    color: rgb(106, 106, 245);
+    background-color: #fff;
+    transition-duration: 0.3s;
+}
+
+.collection-box i:hover {
+    transition-delay: initial !important;
+    box-shadow: 0 0 0 5px #babbbc;
+    background-color: rgb(106, 106, 245);
+    color: #fff;
+}
+
+.collection-box.open {
+    opacity: 1;
+}
+
+.collection-box.open i {
+    left: 20px;
+    opacity: 1;
+}
+
+.collection-box.open i:nth-of-type(1) {
+    transform: rotate(45deg) translateX(-120px) rotate(-45deg);
+    transition-delay: 0.1s;
+}
+
+.collection-box.open i:nth-of-type(2) {
+    transform: rotate(-45deg) translateX(-120px) rotate(45deg);
+    transition-delay: 0.3s;
+}
